--- a/Demo_1/demo_1.html
+++ b/Demo_1/demo_1.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/demo_1.css">
 </head>
 <body>
-    <p class="text-center py-5"><a href="../home.html">Back to Calise Tam's portfolio</a></p>
+    <p class="text-center py-5"><a href="../index.html">Back to Calise Tam's portfolio</a></p>
     <header class="py-4">
         <h1 class="text-center py-5">STUFFED TOYS</h1>
             <nav class="container py-3">
